# chatApp_client

./: .Info.plist.swp  .gitignore  AndroidManifest.xml  AudioController.cpp  AudioController.h  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  CMakePresets.json  ChatInfo.cpp  ChatInfo.h  ChatListModel.cpp  ChatListModel.h  ChatProtocol.cpp  ChatProtocol.h  ClientManager.cpp  ClientManager.h  ContactInfo.cpp  ContactInfo.h  ContactList.cpp  ContactList.h  ContactListModel.cpp  ContactListModel.h  ContactProxyList.cpp  ContactProxyList.h  FileWatcher.cpp  FileWatcher.h  GroupChatListModel.cpp  GroupChatListModel.h  GroupInfo.cpp  GroupInfo.h  GroupListModel.cpp  GroupListModel.h  GroupMessageInfo.cpp  GroupMessageInfo.h  GroupProxyList.cpp  GroupProxyList.h  Info.plist  MediaController.cpp  MediaController.h  (+10 more)
.cache/clangd/index/: ChatListModel.cpp.F061727C35A62125.idx  ChatListModel.hpp.6A3BAB2CCA372B63.idx  ClientManager.cpp.78997BEF0C8C5DA4.idx  ClientManager.hpp.01E1F33F39265B05.idx  ContactInfo.cpp.3E37DEABC1F4C735.idx  ContactInfo.hpp.55010AF61984BC91.idx  ContactListModel.cpp.7D1E085903549960.idx  ContactListModel.hpp.8455789E74B319F9.idx  ContactProxyList.cpp.2736D1DB113B6564.idx  ContactProxyList.hpp.D135B8C7BB7CE54F.idx  GroupChatListModel.cpp.310891EA409BFE3B.idx  GroupChatListModel.hpp.FBE64623BC4C7E16.idx  GroupInfo.cpp.2616E0F5BA1D24AA.idx  GroupInfo.hpp.05055E16BE4F05BA.idx  GroupListModel.cpp.64EC515C079616F5.idx  GroupListModel.hpp.45BE2A3B06D3D8CB.idx  GroupMessageInfo.cpp.BA6F517E2F81ECA9.idx  GroupMessageInfo.hpp.A95C672A01C6F38A.idx  GroupProxyList.cpp.D4FF1758195E78EB.idx  GroupProxyList.hpp.9BD9322B4A88BBCE.idx  MediaController.cpp.F4DF32A67D76C98D.idx  MediaController.hpp.4798150738C0C4CD.idx  MessageInfo.cpp.25E5C3CDA75AD725.idx  MessageInfo.hpp.B7357BCC49C772E9.idx  main.cpp.2F13500593F09151.idx
Android/: AndroidManifest.xml
customModules/: AudioMessageDelegate.qml  AudioPlayer.qml  ChatList.qml  ChatListDelegate.qml  ChatListWindow.qml  ChatMainSection.qml  ChatWindow.qml  ContactList.qml  ContactListDelegate.qml  ContactWindow.qml  ConversationMainSection.qml  ConversationWindow.qml  FileMessageDelegate.qml  FileViewer.qml  ForgottenPassword.qml  GroupAudioMessageDelegate.qml  GroupChatList.qml  GroupChatListDelegate.qml  GroupChatWindow.qml  GroupFileMessageDelegate.qml  GroupList.qml  GroupListDelegate.qml  GroupMenuPanel.qml  GroupTextMessageDelegate.qml  IconText.qml  ImageText.qml  InputField.qml  ListDialog.qml  LoginWindow.qml  Main.qml  MenuPanel.qml  RoundedButton.qml  SettingWindow.qml  SignupWindow.qml  TextMessageDelegate.qml  db.students.js
src/: ClientManager.cpp  ClientManager.h  ClientManager.hpp  FileWatcher.cpp  MediaController.cpp  MediaController.h  MediaController.hpp  main.cpp
src/contacts/: ChatListModel.cpp  ChatListModel.hpp  ContactInfo.cpp  ContactInfo.h  ContactInfo.hpp  ContactListModel.cpp  ContactListModel.h  ContactListModel.hpp  ContactProxyList.cpp  ContactProxyList.h  ContactProxyList.hpp  MessageInfo.cpp  MessageInfo.h  MessageInfo.hpp
src/groups/: GroupChatListModel.cpp  GroupChatListModel.hpp  GroupInfo.cpp  GroupInfo.hpp  GroupListModel.cpp  GroupListModel.h  GroupListModel.hpp  GroupMessageInfo.cpp  GroupMessageInfo.h  GroupMessageInfo.hpp  GroupProxyList.cpp  GroupProxyList.hpp
